# hlidskjalf

./: .cleanup-rebuild-script-created.md  .cors-final-fix.md  .cors-fix-summary.md  .dashboard-frontend-status.md  .dashboard-implementation-summary.md  .deep-cleanup-removed-summary.md  .environment-map.md  .frontend-url-fix-complete.md  .gitignore  .grafana-fix-summary.md  .model-server-macos-setup.md  .model-server-mtls-migration.md  .model-server-quick-start.md  .zitadel-apps.env  COMPOSE_MIGRATION_SUMMARY.md  MODULARIZATION_SUCCESS.md  PROJECT_PLAN.md  README.md  TODO.md  add_traefik_labels.py  deploy_event_driven.py  deploy_platform.sh  docker-compose-backup.yml  docker-compose-modular.yml  docker-compose-updated.yml  docker-compose.yml  nginx.conf  norns_traefik_mission.py  orchestrate_platform_deployment.py  sendTwilio.py
bifrost-gateway/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bifrost-gateway/scripts/: setup.sh
bifrost-gateway/src/: __init__.py  config.py  gitlab_client.py  main.py  secrets.py  tools_registry.py  work_items.py
bifrost-gateway/src/adapters/: __init__.py  base.py  registry.py  slack.py  telegram.py
bifrost-gateway/src/backends/: __init__.py  anthropic_backend.py  base.py  mcp_backend.py  norns.py  openai_backend.py  registry.py
hlidskjalf/: Dockerfile  Dockerfile.langgraph  README.md  pyproject.toml
hlidskjalf/dossiers/ravenhelm/: dossier.json
hlidskjalf/migrations/versions/: 001_create_muninn_memories.sql  002_llm_providers_config.sql  003_procedural_memory_enhancements.sql
hlidskjalf/scripts/: seed_llm_config.py
hlidskjalf/skills/analyze-logs/: SKILL.md
hlidskjalf/skills/create-skill/: SKILL.md
hlidskjalf/skills/docker-operations/: SKILL.md
hlidskjalf/skills/error-handling-and-recovery/: SKILL.md
hlidskjalf/skills/file-editing/: SKILL.md
hlidskjalf/skills/git-operations/: SKILL.md
hlidskjalf/skills/memory-retrieval/: SKILL.md
hlidskjalf/skills/self-improvement/: SKILL.md
hlidskjalf/skills/spawn-subagent-type/: SKILL.md
hlidskjalf/skills/terminal-commands/: SKILL.md
hlidskjalf/src/: __init__.py  main.py
hlidskjalf/src/agents/health-monitor/: Dockerfile  __init__.py  agent.py  tools.py
hlidskjalf/src/api/: __init__.py  llm_config.py  norns_deep_api.py  project_routes.py  routes.py
hlidskjalf/src/core/: config.py  secrets.py
hlidskjalf/src/memory/: README.md  __init__.py  ollama_provider.py
hlidskjalf/src/memory/events/: __init__.py  kafka_producer.py  nats_producer.py  schemas.py
hlidskjalf/src/memory/frigg/: __init__.py  context_agent.py  context_cache.py  persona_snapshot.py
hlidskjalf/src/memory/hel/: __init__.py  decay_scheduler.py  promoter.py  weight_engine.py
hlidskjalf/src/memory/huginn/: __init__.py  nats_subscriber.py  state_agent.py  state_cache.py
hlidskjalf/src/memory/mimir/: __init__.py  dossier_loader.py  graph_projection.py  models.py  triplet_engine.py
hlidskjalf/src/memory/muninn/: __init__.py  episodic.py  procedural.py  semantic.py  store.py  structural.py  weaviate_adapter.py
hlidskjalf/src/models/: __init__.py  llm_config.py  registry.py
hlidskjalf/src/norns/: __init__.py  agent.py  cognitive_norns.py  deep_agent.py  deep_agent_system.py  deterministic_worker.py  event_driven_agent.py  event_driven_orchestrator.py  linear_dispatcher.py  llm_config_registry.py  memory_tools.py  planner.py  routes.py  self_awareness.py  skills.py  specialized_agents.py  squad_schema.py  subagent_spawner.py  ticket_orchestrator.py  tools.py  tools_api.py
hlidskjalf/src/norns/.backups/: tools_20251202_221621.py  tools_20251202_231815.py
hlidskjalf/src/norns/.changelog/: 20251202_231815_tools.md
hlidskjalf/src/services/: __init__.py  compose_generator.py  config_loader.py  deployment_manager.py  document_ingestion.py  gitlab_sync.py  llm_config.py  llm_model_watcher.py  llm_providers.py  memory.py  nginx_generator.py  port_allocator.py  port_registry.py  project_generator.py  traefik_generator.py  twilio_notifier.py
hlidskjalf/tests/: test_api_overview.py
hlidskjalf/ui/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
hlidskjalf/ui/src/: auth.ts  middleware.ts
hlidskjalf/ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  telemetry-init.tsx
hlidskjalf/ui/src/app/login/: page.tsx
hlidskjalf/ui/src/app/norns/: page.tsx
hlidskjalf/ui/src/app/tools/: page.tsx
hlidskjalf/ui/src/components/: NornsChat.tsx  SubagentPanel.tsx
hlidskjalf/ui/src/components/console/: ControlSurface.tsx  EventTimeline.tsx  HealthPanel.tsx  NornsConsole.tsx  PipelineNode.tsx  index.ts
hlidskjalf/ui/src/hooks/: useLlmConfigEvents.ts  useObservabilityStream.ts
hlidskjalf/ui/src/lib/: api.ts  telemetry.ts
hlidskjalf/ui/src/providers/: NornsSessionProvider.tsx  Stream.tsx  Thread.tsx
libs/ravenvoice/: README.md  pyproject.toml
libs/ravenvoice/src/ravenvoice/: __init__.py  core.py
templates/ravenmaskos/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
templates/ravenmaskos/.github/workflows/: ci.yml
templates/ravenmaskos/infra/: docker-compose.dev.yml  otel-collector.yaml  prometheus.yml
templates/ravenmaskos/infra/terraform/: main.tf  variables.tf
templates/ravenmaskos/infra/zitadel/: setup.sh
templates/ravenmaskos/src/app/: main.py
templates/ravenmaskos/src/migrations/: env.py  script.py.mako
templates/ravenmaskos/tests/: conftest.py  test_health.py
templates/ravenmaskos/tests/api/: test_auth.py  test_authz.py  test_users.py
templates/ravenmaskos/tests/services/: test_auth_service.py
templates/ravenmaskos/web/: package-lock.json  package.json
templates/ravenmaskos/web/src/: middleware.ts
tests/saaa-tests/: conftest.py  pyproject.toml
tests/saaa-tests/config/: test_config.yaml
tests/saaa-tests/tests/: __init__.py
tests/saaa-tests/tests/frontend/: test_voice_ui.py
tests/saaa-tests/tests/governance/: test_bipa_compliance.py
tests/saaa-tests/tests/latency/: test_agent_latency.py
tests/saaa-tests/tests/load/: locustfile.py
tests/saaa-tests/tests/voice/: test_audio_pipeline.py
(+419 files in other folders)
