[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hlidskjalf"
version = "0.1.0"
description = "Hliðskjálf - Odin's High Seat. The throne from which all Nine Realms are observed. Platform control plane for Ravenhelm."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ravenhelm Team" }
]

dependencies = [
    # FastAPI Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    
    # Redis for caching
    "redis>=5.2.0",
    
    # Docker SDK for container management
    "docker>=7.1.0",
    
    # AWS SDK for cloud deployments
    "boto3>=1.35.0",
    
    # HTTP client
    "httpx>=0.28.0",
    
    # Templating for nginx config generation
    "jinja2>=3.1.0",
    
    # =========================================================================
    # THE NORNS - AI Agent (LangGraph) - Latest Versions
    # =========================================================================
    "langchain>=0.3.18",
    "langchain-core>=0.3.30",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.9",
    "langchain-ollama>=0.2.7",
    "langchain-huggingface>=0.1.0",  # HuggingFace TGI support
    "langchain-community>=0.3.18",
    "langgraph>=1.0.4",  # Latest stable!
    "langsmith>=0.3.1",
    "langfuse>=2.63.0",  # For tracing the Norns' thoughts
    "twilio>=9.8.0",
    
    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "croniter>=5.0.0",  # For scheduled health checks
    "aiofiles>=24.1.0",  # Async file operations
    
    # Event-driven coordination
    "aiokafka>=0.11.0",  # Async Kafka client for Redpanda
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "langgraph-cli[inmem]>=0.1.66",
]

# Optional SPIFFE/SPIRE for zero-trust (not yet compatible with Python 3.13+)
spire = [
    "py-spiffe>=0.5.0; python_version<'3.13'",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

