[project]
name = "ravenvoice"
version = "0.1.0"
description = "Reusable voice agent library — LiveKit + Deepgram + ElevenLabs + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ravenhelm", email = "dev@ravenhelm.test"},
]
keywords = ["voice", "agent", "livekit", "deepgram", "elevenlabs", "langgraph", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "livekit>=0.11.0",
    "livekit-agents>=0.8.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
deepgram = [
    "deepgram-sdk>=3.0.0",
]
elevenlabs = [
    "elevenlabs>=1.0.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "ravenvoice[deepgram,elevenlabs,openai]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ravenhelm/ravenvoice"
Documentation = "https://ravenhelm.test/docs/ravenvoice"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ravenvoice"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

